# crystalballer

./: .cruft.json  .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run
.github/: check_lint  check_lint.sh  format  format.sh
.github/workflows/: lint.yml  test.yml
crystalballer/: __init__.py  constants.py  linalg.py
crystalballer/depthai_pipelines/drawing/: __init__.py  text.py
crystalballer/depthai_pipelines/face_position_tracker/: calculations.py  detection.py  pipeline.py  stereo.py
crystalballer/drawing/: text.py
crystalballer/o3d_utils/: __init__.py  fullscreen_visualizer.py  renderer.py  visualizer.py
crystalballer/o3d_utils/stls/: multi_stl_geometry.py
crystalballer/resources/stls/globe/: globe_upper.stl
crystalballer/scripts/: eyeball.py  face_depth_detector.py  mobilenet_detector.py  mobilenet_person_detection.py  rendering_experiments.py  run_oakd.py
crystalballer/scripts/face_depth_detector/: __init__.py  drawing.py  inference.py
crystalballer/scripts/face_landmark_detector/: __init__.py  draw.py  prior_box.py
face_tracker/: .cruft.json  Dockerfile  README.md  pyproject.toml
face_tracker/crystalballer/: constants.py
face_tracker/crystalballer/depthai_pipelines/: __init__.py
face_tracker/crystalballer/depthai_pipelines/face_position_tracker/: __init__.py  calculations.py  detection.py  filtering.py  pipeline.py  stereo.py
face_tracker/crystalballer/drawing/: __init__.py  landmarks.py  text.py
face_tracker/crystalballer/o3d_utils/: __init__.py  visualizer.py
face_tracker/crystalballer/o3d_utils/stls/: __init__.py  globe.py
face_tracker/crystalballer/resources/: __init__.py
face_tracker/crystalballer/resources/stls/globe/: globe_lower.stl
face_tracker/crystalballer/scripts/: eyeball.py  face_depth_detector.py  face_socket_server.py  rendering_experiments.py
godot/: .gitattributes
godot/eyeball-test/: .gitattributes  export_presets.cfg  icon.svg.import  main.tscn  project.godot
godot/eyeball-test/models/: .gitignore  eye.blend  eye.obj.import
godot/eyeball-test/models/textures/: eye.jpg.import
godot/eyeball-test/scripts/: camera_control.gd  fullscreen_control.gd  random_eye_look.gd
godot/eyeball-test/shaders/: unlit.gdshader
godot/sphere-mapper/: .gitignore  export_presets.cfg  icon.svg.import  main.tscn  project.godot
godot/sphere-mapper/images/: placeholder_orange.png.import
godot/sphere-mapper/models/: dome_platform.obj.import  gakken.obj.import  suzanne.obj.import
godot/sphere-mapper/scripts/: CameraController.gd  SphereMapper.gd  TrackingManager.gd  WindowManager.gd  camera_controller.gd  helper_camera_controller.gd  rotate.gd  sphere_mapper.gd  tracking_manager.gd  window_manager.gd
godot/sphere-mapper/shaders/: gakken_project.gdshader
