[tool.poetry]
name = "crystalballer"
version = "0.1.0"
description = "Combining projection mapping and head tracking to make awesome mystical interactive displays!"
authors = ["Alex Thiele <apocthiel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
blobconverter = "1.4.2"
open3d = "0.16.0"

[tool.poetry.dev-dependencies]
vulture = "^2.10"
bandit = "^1.7"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12"
mypy = "^1.7.1"
cruft = "^2.10"

# Flake8 plugins
darglint = "^1.8.1"
pep8-naming = "^0.13.3"
flake8-bugbear = "^23.9.16"
flake8-comprehensions = "^3.14.0"
flake8-implicit-str-concat = "^0.4.0"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"
flake8-noqa = "^1.3.0"

[tool.poetry.scripts]
mobilenet_detector = "crystalballer.scripts.mobilenet_detector:main"
face_landmark_detector = "crystalballer.scripts.face_landmark_detector:main"
face_depth_detector = "crystalballer.scripts.face_depth_detector:main"
rendering_experiments = "crystalballer.scripts.rendering_experiments:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
implicit_reexport = true
# We can't add annotations to decorators from other libraries, making this
# check not very useful
disallow_untyped_decorators = false
